Add commit squash 3

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h2> change under secondbranch  </h2>
     <p> pargrap</p>
     <p> pargrap 2</p>
+    <p> pargrap 3</p>
+
 
 </body>
 </html>
